[ticket/8228] Fix whitespaces before code in Firefox
Based on the "[code] enhancements" modification by TerraFrost

PHPBB3-8228

--- a/phpBB/styles/prosilver/theme/colours.css
+++ b/phpBB/styles/prosilver/theme/colours.css
@@ -479,7 +479,7 @@ dl.codebox dt {
 	border-bottom-color:  #CCCCCC;
 }
 
-dl.codebox code {
+dl.codebox pre {
 	color: #2E8B57;
 }
 
